--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stat-dto</artifactId>
+            <artifactId>stats-dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
