Replace location service and transfer to another PC

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>core</module>
         <module>infra</module>
         <module>stats</module>
+        <module>core/location-service</module>
     </modules>
 
     <groupId>ru.practicum</groupId>
