--- a/infra/config-server/src/main/resources/config/core/location-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/location-service/application.yaml
@@ -8,7 +8,7 @@ spring:
     driverClassName: org.postgresql.Driver
     username: location
     password: location
-    url: jdbc:postgresql://localhost:6550:location
+    url: jdbc:postgresql://localhost:6550/location
   jpa:
     hibernate:
       ddl-auto: create-drop
