Event-service written, need to calibrate

--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -24,7 +24,7 @@ spring:
         - id: event_service_route
           uri: lb://event-service
           predicates:
-            - Path=/admin/events/**,/users/{userId}/events/**,/events/**
+            - Path=/admin/events/**,/users/*/events/**,/events/**
         - id: location_service_route
           uri: lb://location-service
           predicates:
