--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,3 +88,18 @@ services:
       timeout: 5s
       interval: 5s
       retries: 10
+
+  request-db:
+    image: postgres:16.1
+    container_name: request
+    ports:
+      - "6554:5432"
+    environment:
+      - POSTGRES_PASSWORD=request
+      - POSTGRES_USER=request
+      - POSTGRES_DB=request
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
