--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -7,29 +7,33 @@ spring:
   cloud:
     gateway:
       discovery.locator.enabled: true
-      #routes:
-      #  - id: main_service_route
-      #    uri: lb://main-service
-      #    predicates:
-      #      - Path=/compilations/**,/events/**,/comments/**,/admin/**
       routes:
         - id: request_service_route
           uri: lb://request-service
           predicates:
             - Path=/users/*/requests/**,/users/*/events/*/requests/**
+
         - id: category_service_route
           uri: lb://category-service
           predicates:
             - Path=/categories/**,/admin/categories/**
+
         - id: user_service_route
           uri: lb://user-service
           predicates:
             - Path=/admin/users/**
+
         - id: event_service_route
           uri: lb://event-service
           predicates:
             - Path=/admin/events/**,/users/*/events/**,/events/**
+
         - id: location_service_route
           uri: lb://location-service
           predicates:
             - Path=//location/**
+
+        - id: compilation_service_route
+          uri: lb://compilation-service
+          predicates:
+            - Path=/compilations/**
