--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>core/user-service</module>
         <module>core/event-service</module>
         <module>core/request-service</module>
+        <module>core/compilation-service</module>
     </modules>
 
     <groupId>ru.practicum</groupId>
