compilation gateway fix

--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -26,7 +26,7 @@ spring:
         - id: event_service_route
           uri: lb://event-service
           predicates:
-            - Path=/admin/events/**,/users/*/events/**,/events/**,/compilations/**,admin/compilations/**
+            - Path=/admin/events/**,/users/*/events/**,/events/**,/compilations/**,/admin/compilations/**
 
         - id: location_service_route
           uri: lb://location-service
