--- a/core/request-service/pom.xml
+++ b/core/request-service/pom.xml
@@ -16,13 +16,14 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <interaction-api.version>0.0.1-SNAPSHOT</interaction-api.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>interaction-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${interaction-api.version}</version>
         </dependency>
 
         <dependency>
