--- a/stats/collector/pom.xml
+++ b/stats/collector/pom.xml
@@ -5,18 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>explore-with-me</artifactId>
+        <artifactId>stats</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>stats-client</module>
-        <module>stats-dto</module>
-        <module>stats-server</module>
-        <module>collector</module>
-    </modules>
+    <artifactId>collector</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
