aggregator added (not sure I still can use math right)

--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -17,6 +17,8 @@
         <module>stats-server</module>
         <module>collector</module>
         <module>serialization</module>
+        <module>analyzer</module>
+        <module>aggregator</module>
     </modules>
 
     <properties>
