--- a/infra/config-server/src/main/resources/config/stats/analyzer/application.yaml
+++ b/infra/config-server/src/main/resources/config/stats/analyzer/application.yaml
@@ -4,3 +4,20 @@ server:
 grpc:
   server:
     port: 0
+
+spring:
+  datasource:
+    driverClassName: org.postgresql.Driver
+    username: stat
+    password: stat
+    url: jdbc:postgresql://localhost:6541/stat
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: 'true'
+    show_sql: 'true'
+  sql:
+    init:
+      mode: always
