--- a/infra/config-server/src/main/resources/config/core/request-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/request-service/application.yaml
@@ -24,3 +24,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
+
+grpc:
+  client:
+    analyzer:
+      address: 'discovery:///analyzer'
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: plaintext
