--- a/infra/config-server/src/main/resources/config/core/event-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/event-service/application.yaml
@@ -26,6 +26,9 @@ eureka:
       defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
 
 grpc:
+  server:
+    enabled: false
+    port: 0
   client:
     analyzer:
       address: 'discovery:///analyzer'
