--- a/infra/config-server/src/main/resources/config/core/request-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/request-service/application.yaml
@@ -26,9 +26,12 @@ eureka:
       defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
 
 grpc:
+  server:
+    enabled: false
+    port: 0
   client:
-    analyzer:
-      address: 'discovery:///analyzer'
+    collector:
+      address: 'discovery:///collector'
       enableKeepAlive: true
       keepAliveWithoutCalls: true
       negotiationType: plaintext
