Analyzer pom fix

--- a/stats/analyzer/pom.xml
+++ b/stats/analyzer/pom.xml
@@ -102,7 +102,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.3.2</version>
                 <configuration>
-                    <mainClass>ru.practicum.Analyzer</mainClass>
+                    <mainClass>ru.yandex.practicum.AnalyzerApp</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
