--- a/stats/serialization/proto-schemas/pom.xml
+++ b/stats/serialization/proto-schemas/pom.xml
@@ -16,6 +16,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <protobuf.version>3.23.4</protobuf.version>
+        <grpc.version>1.63.0</grpc.version>
     </properties>
 
     <dependencies>
