--- a/core/category-service/pom.xml
+++ b/core/category-service/pom.xml
@@ -17,6 +17,8 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <interaction-api.version>0.0.1-SNAPSHOT</interaction-api.version>
+        <maven-compiler.version>3.13.0</maven-compiler.version>
+        <lombok-binding.version>0.2.0</lombok-binding.version>
     </properties>
 
     <dependencies>
@@ -85,7 +87,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>${maven-compiler.version}</version>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
@@ -98,7 +100,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok-mapstruct-binding</artifactId>
-                            <version>0.2.0</version>
+                            <version>${lombok-mapstruct.version}</version>
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
