--- a/core/location-service/pom.xml
+++ b/core/location-service/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <interaction-api.version>0.0.1-SNAPSHOT</interaction-api.version>
+        <maven-compiler.version>3.13.0</maven-compiler.version>
     </properties>
 
     <dependencies>
@@ -85,7 +86,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>${maven-compiler.version}</version>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
