--- a/core/request-service/pom.xml
+++ b/core/request-service/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <interaction-api.version>0.0.1-SNAPSHOT</interaction-api.version>
+        <grpc-client.version>3.1.0.RELEASE</grpc-client.version>
     </properties>
 
     <dependencies>
@@ -75,7 +76,7 @@
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
-            <version>3.1.0.RELEASE</version>
+            <version>${grpc-client.version}</version>
         </dependency>
     </dependencies>
 
