--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -15,29 +15,15 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <grpc-client.version>3.1.0.RELEASE</grpc-client.version>
+        <proto-schemas.version>0.0.1-SNAPSHOT</proto-schemas.version>
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-commons</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.retry</groupId>
-            <artifactId>spring-retry</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
-            <version>3.1.0.RELEASE</version>
+            <version>${grpc-client.version}</version>
         </dependency>
 
         <dependency>
@@ -48,7 +34,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>proto-schemas</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${proto-schemas.version}</version>
         </dependency>
     </dependencies>
 
