--- a/core/interaction-api/pom.xml
+++ b/core/interaction-api/pom.xml
@@ -16,9 +16,16 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <constants.version>0.0.1-SNAPSHOT</constants.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>constants</artifactId>
+            <version>${constants.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
