--- a/stats/aggregator/pom.xml
+++ b/stats/aggregator/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <avro-schemas.version>0.0.1-SNAPSHOT</avro-schemas.version>
+        <my-modules.version>0.0.1-SNAPSHOT</my-modules.version>
     </properties>
 
     <dependencies>
@@ -54,7 +54,13 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>avro-schemas</artifactId>
-            <version>${avro-schemas.version}</version>
+            <version>${my-modules.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>constants</artifactId>
+            <version>${my-modules.version}</version>
         </dependency>
 
     </dependencies>
