--- a/stats/collector/pom.xml
+++ b/stats/collector/pom.xml
@@ -20,7 +20,7 @@
         <maven-compiler.version>3.13.0</maven-compiler.version>
         <lombok.version>1.18.30</lombok.version>
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
-        <avro-proto-schemas.version>0.0.1-SNAPSHOT</avro-proto-schemas.version>
+        <my-modules.version>0.0.1-SNAPSHOT</my-modules.version>
     </properties>
 
     <dependencies>
@@ -28,14 +28,18 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>avro-schemas</artifactId>
-            <version>${avro-proto-schemas.version}</version>
+            <version>${my-modules.version}</version>
         </dependency>
-
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>proto-schemas</artifactId>
-            <version>${avro-proto-schemas.version}</version>
+            <version>${my-modules.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>constants</artifactId>
+            <version>${my-modules.version}</version>
         </dependency>
 
         <!-- Spring dependencies -->
